# mcp-server-wechat

./: .env.example  .gitignore  CLAUDE.md  INSTALLATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  TEST_REPORT.md  claude_desktop_config.json  pyproject.toml  test_article.py  test_direct.py  test_project.py
.trae/specs/mcp-server-wechat/: evaluations.xml
scripts/: install_to_claude.sh  start_server.sh  uninstall_from_claude.sh
src/mcp_server_wechat/: __init__.py  server.py
src/mcp_server_wechat/tools/: __init__.py
src/mcp_server_wechat/utils/: __init__.py  api_client.py  cache.py  errors.py  formatters.py  search_client.py
